   event_handler. See "help events" and "help event <type>". [GM]
 * dump events: dump`5min, dump`1min, dump`complete.
 * object events: object`create, object`destroy, object`move,
   object`rename, object`kill.
 * sql events: sql`connect, sql`disconnect.
 * signal events: signal`usr1, signal`usr2.
 * player events: player`create, player`fail, player`connect,
   player`disconnect.
 * socket events: socket`connect, socket`disconnect

Commands:
 * @mapsql passes row results to attributes. Suggested by Mercutio. [GM]
 * @dig now takes an optional garbage dbref argument to specify the new
   dbref. Suggested by Paige. [GM]
 * The help command now does some auto-expansion of topics. For example,
   'help @chan ad2' will be expanded to match 'help @channel admin2'. [MG]
 * @force/inplace, @switch/inplace and @select/inplace now run their commands
   without queueing new events. These are limited by the @include limit. [GM]
   
Attributes:
 * New no_debug flag, which prevents debug info being shown for an attribute
   when the object is set DEBUG. [MG]

Functions:
 * align() now has '$' (nofill) as an option. Ideal for rightmost columns.
   Suggested by Minion. [GM]
 * dig() now takes an optional garbage dbref argument to specify the new
   dbref. Suggested by Paige. [GM]
 * convutctime() and convtime(<time>, utc) to convert a timestring to
   # of seconds since UTC. Patch by Minion.

Minor Changes:
 * The Can_Nspemit @power has been renamed to Can_Spoof, to better reflect
   its uses. Can_Nspemit is still an alias. [MG]
 * Considerable improvement in the speed of functions that sort
   case-insensitively, particularly using 'm' sort (Now default). [GM]
 * Combined fun_setinter, fun_setdiff and fun_setunion into fun_setmanip. [GM]
 * For hardcoders: list2arr and list2arr_ansi now take a third argument
   on whether to include empty items. [GM]
 * page and @mail will report to you if your recipient(s) cannot reply
   to you. Suggested by Paige. [GM]