@@ -80,13 +80,19 @@
   the help for them, type "help event <type>".
 
   dump: dump`5min, dump`1min, dump`complete, dump`error
+  db: db`dbck, db`purge, db`warnings
   object: object`create, object`destroy, object`move, object`rename,
           object`kill
   sql: sql`connect, sql`connectfail, sql`disconnect
   signal: signal`usr1, signal`usr2
   player: player`create, player`connect, player`disconnect
+          player`inactivity
   socket: socket`connect, socket`disconnect, socket`loginfail,
           socket`createfail
+& EVENT DB
+  db`dbck: Run after the regular database consistency check.
+  db`purge: Run after the regular purging of destroyed objects.
+  db`wcheck: Run after the regular @warnings check.
 & EVENT DUMP
   dump`5min (Original message, isforking)
       Database save will occur in 5 minutes.
@@ -178,6 +184,7 @@ No arguments are passed to these events.
                      idle() secs, recv bytes/sent bytes/command count)
       Similar to @adisconnect, but for event system, and with more
       information available.
+  player`inactivity: Run after idle players are disconnected.
 & EVENT SOCKET
   socket`connect (descriptor, ip)
       Triggered when a socket first connects to the port. Using this and
