@@ -193,8 +193,16 @@ extern void do_dbck(dbref player);
 extern void do_destroy(dbref player, char *name, int confirm);
 
 /* From timer.c */
-extern void init_timer(void);
-extern void signal_cpu_limit(int signo);
+void init_timer(void);
+void signal_cpu_limit(int signo);
+
+typedef void (*sq_func)(void *);
+void sq_register(time_t w, sq_func f, void *d, const char *ev);
+void sq_register_in(int n, sq_func f, void *d, const char *ev);
+bool sq_run_one(void);
+bool sq_run_all(void);
+
+void init_sys_events(void);
 
 /* From version.c */
 extern void do_version(dbref player);
