@@ -1,4 +1,4 @@
-/*-----------------------------------------------------------------
+/*----------------------------------------------- -*- c -*-
  * Local stuff
  *
  * This file contains custom stuff, and some of the items here are
@@ -26,6 +26,19 @@ extern HASHTAB htab_reserved_aliases;
 void
 local_startup(void)
 {
+
+/* Register local_timer to be called once a second. You can also
+* register other callbacks to run at other intervals. See local_timer()
+* below for an example of what the callback function needs to do if it
+* should be run more than once. 
+*
+* Arguments are: Number of seconds from now to run, the callback function,
+* a data argument to pass to it, and a softcoded event name to run at the same
+* time. The latter two can be null pointers.
+*/
+#if 0 /* Change to 1 if you need local_timer functionality. */
+  sq_register_in(1, local_time, NULL, NULL);      
+#endif
 }
 
 /* Add you own runtime configuration options here, and you can set
@@ -104,8 +117,11 @@ local_dbck(void)
  * After the MUSH has done all it's stuff
  */
 void
-local_timer(void)
+local_timer(void *data __attribute__((__unused__)))
 {
+
+  /* The callback has to be set back up or it'll only run once. */
+  sq_register_in(1, local_timer, NULL, NULL);
 }
 
 /* Called when a player connects. If this is a new creation,
